Drivers freezing input value #63325

Closed
opened 2019-04-05 23:42:49 +02:00 by Tom Wilson · 8 comments

Blender Version
Broken: blender-2.80.0-git.03bd024c077d-windows64

Short description of error
I have a scene with a single light and a mesh with an emission material. I've set up a driver for the emission value, driven by the light energy.
The light energy is keyframed and controlled with an fcurve.
However, once the driver is connected to the light's energy, the light energy freezes and becomes will not update at any point in the fcurve. Changing the fcurve keyframe values or running the animation doesn't work.
If I delete the driver, the light energy animates properly.

I can't for the life of me work out the cause or exact steps to recreate this bug, it appears either the material or the light is permanently corrupted in some way.
Even copying the objects to a new blend, they remain corrupted.
I've tried removing and creating new animation data for the light, I've tried deleting the driver and creating a new one.
Absolutely nothing works. It's seemingly impossible without creating a new light and emission material.

I can create a new light and emission material in the same scene and setup and the exact same driver however, and this works.
I spent hours trying to suss this one out.
Horrible, random bug :(

See attached a simplified blend file demonstrating the problem. Notice how the light value doesn't change between frames 0-100 which is animated, but on deleting the emission material's driver, it works.
Also note how the timeline playhead only updates the energy value immediately on loading the blend. Try saving the file with the playhead in different positions and notice how the energy value is different on load. Also try moving the keyframes, this updates the energy value too.

Edit: Interestingly, if instead of adding Single Properties and referring to them in the Expression textbox, I can refer to the light directly with python (ie, bpy.data.lights["Point"].energy) in the Expression textbox and it works perfectly. However I'm warned by Blender that it is considerably slower doing it this way.

driver-bug.blend

**Blender Version** Broken: blender-2.80.0-git.03bd024c077d-windows64 **Short description of error** I have a scene with a single light and a mesh with an emission material. I've set up a driver for the emission value, driven by the light energy. The light energy is keyframed and controlled with an fcurve. However, once the driver is connected to the light's energy, the light energy freezes and becomes will not update at any point in the fcurve. Changing the fcurve keyframe values or running the animation doesn't work. If I delete the driver, the light energy animates properly. I can't for the life of me work out the cause or exact steps to recreate this bug, it appears either the material or the light is permanently corrupted in some way. Even copying the objects to a new blend, they remain corrupted. I've tried removing and creating new animation data for the light, I've tried deleting the driver and creating a new one. Absolutely nothing works. It's seemingly impossible without creating a new light and emission material. I can create a new light and emission material in the same scene and setup and the exact same driver however, and this works. I spent hours trying to suss this one out. Horrible, random bug :( See attached a simplified blend file demonstrating the problem. Notice how the light value doesn't change between frames 0-100 which is animated, but on deleting the emission material's driver, it works. Also note how the timeline playhead only updates the energy value immediately on loading the blend. Try saving the file with the playhead in different positions and notice how the energy value is different on load. Also try moving the keyframes, this updates the energy value too. Edit: Interestingly, if instead of adding Single Properties and referring to them in the Expression textbox, I can refer to the light directly with python (ie, bpy.data.lights["Point"].energy) in the Expression textbox and it works perfectly. However I'm warned by Blender that it is considerably slower doing it this way. [driver-bug.blend](https://archive.blender.org/developer/F6914284/driver-bug.blend)
Author

Added subscriber: @hedgehog90-3

Added subscriber: @hedgehog90-3

Added subscribers: @Sergey, @ZedDB

Added subscribers: @Sergey, @ZedDB
Sergey Sharybin was assigned by Sebastian Parborg 2019-04-07 18:03:31 +02:00

@Sergey any idea what is going on here?

@Sergey any idea what is going on here?
Author

I'm still experiencing this issue with the latest build.

Here's another example which I'll describe slightly differently:

light nla bug 3.blend

In the NLA editor are 2 strips, the first sets the light to power 20, the other to power 0, labelled ON and OFF.
The emission strength of the lightbox shader is driven by the point light power.

Notice how moving the playhead over each nla strip does nothing to the light power value.

Turn on rendered view and try tweaking the ON strip. Observe the rendered view and the power property. Now exit tweak mode.
You should notice the light power change on entering tweak mode, hover over the property panel for it to redraw.
On Exiting you should notice the emission strength update.
The same behaviour is exhibited on the OFF strip.

Also note that rendering a still image works correctly, it's just in 3D view that this is an issue.

I'm still experiencing this issue with the latest build. Here's another example which I'll describe slightly differently: [light nla bug 3.blend](https://archive.blender.org/developer/F6978964/light_nla_bug_3.blend) In the NLA editor are 2 strips, the first sets the light to power 20, the other to power 0, labelled ON and OFF. The emission strength of the lightbox shader is driven by the point light power. Notice how moving the playhead over each nla strip does nothing to the light power value. Turn on rendered view and try tweaking the ON strip. Observe the rendered view and the power property. Now exit tweak mode. You should notice the light power change on entering tweak mode, hover over the property panel for it to redraw. On Exiting you should notice the emission strength update. The same behaviour is exhibited on the OFF strip. Also note that rendering a still image works correctly, it's just in 3D view that this is an issue.

@hedgehog90-3, the report is still open and assigned to me. Not sure why it would be expected to be solved in the newer builds.
We've got more than a 1000 of reports for handful of developers. Please be patient. The issue will be solved.

@hedgehog90-3, the report is still open and assigned to me. Not sure why it would be expected to be solved in the newer builds. We've got more than a 1000 of reports for handful of developers. Please be patient. The issue will be solved.
Author

My apologies. In your own time.

My apologies. In your own time.

This issue was referenced by 9ed8f8a968

This issue was referenced by 9ed8f8a968a9b8389f711e951806795794f5ddde

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63325
No description provided.